Implementazione metodo REST: Delete Report
