# Backend/src/routes/reportRoutes.js
@@ -32,7 +32,7 @@ router.get('/:id', async (req, res) => {
 
 router.post('/', tokenChecker, async (req, res) => {
     if (!req.body) {
-        return res.status(400).json(createError('Richiesta non valida', 400, 
+        return res.status(400).json(createError('Richiesta non valida', 400,
             'Devi fornire una segnalazione nel corpo della richiesta.'));
     }
 
@@ -47,11 +47,16 @@ router.post('/', tokenChecker, async (req, res) => {
 router.delete('/:id', tokenChecker, async (req, res) => {
     const id = req.params.id;
 
-    if (req.user.role === 'user') {}
-
     try {
-        const report = await service.deleteReport(id);
-        res.status(200).json(report);
+        const report = await service.getReportById(id);
+
+        if (req.user.role === 'citizen' && req.user.id !== report.userId) {
+            return res.status(403).json(createError('Accesso negato. ', 403,
+                'Puoi eliminare solo le segnalazioni che hai creato.'));
+        }
+
+        await service.deleteReport(id);
+        res.status(204).json(null);
     } catch (error) {
         res.status(error.code).json(error);
     }
