# swagger.yaml
@@ -6,7 +6,8 @@ info:
   version: 1.0.0
 
 servers:
-  - url: TODO
+  - url: http://localhost:3000/api/v1
+    description: Server locale per lo sviluppo e il test.
 
 tags:
   - name: Autenticazione
@@ -226,7 +227,7 @@ paths:
       summary: Elimina una segnalazione specifica.
       description: >-
         Elimina una segnalazione specifica in base all'ID fornito. 
-        Devi essere autenticato per poter eliminare una segnalazione.
+        Devi essere autenticato per eliminare una segnalazione.
         Se sei autenticato come amministratore, puoi eliminare qualsiasi segnalazione.
         Se sei autenticato come cittadino, puoi eliminare solo le segnalazioni che hai creato.
       security:
@@ -348,10 +349,10 @@ paths:
 
   /sites/{id}:
     delete:
-      summary: Elimina un cantiere in base all'ID
+      summary: Elimina una cantiere specifico.
       description: >-
-        Elimina un cantiere esistente in base all'ID fornito.
-        Per eliminare un cantiere è necessario essere autenticati come amministratore.
+        Elimina un cantiere specifico in base all'ID fornito. 
+        Devi essere autenticato come amministratore per eliminare una cantiere.
       security:
         - ApiKeyAuth: []
       parameters:
@@ -362,7 +363,7 @@ paths:
             type: string
           description: ID del cantiere da eliminare
       responses:
-        "200":
+        "204":
           description: Cantiere eliminato con successo.
           content:
             application/json:
@@ -372,37 +373,37 @@ paths:
                   message:
                     type: string
                     description: Messaggio di conferma dell'eliminazione.
-        "400":  
+        "400":
           description: Richiesta non valida.
           content:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
-        "401":  
+        "401":
           description: Non autorizzato. Devi fornire una chiave API valida.
           content:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
-        "403":  
+        "403":
           description: Accesso negato. Devi essere un amministratore per eliminare un cantiere.
           content:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
-        "404":  
+        "404":
           description: Eliminazione fallita. Nessun cantiere trovato con l'ID fornito.
           content:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
-        "500":  
+        "500":
           description: Errore interno del server.
           content:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
-            
+
 components:
   securitySchemes:
     ApiKeyAuth:
@@ -622,8 +623,6 @@ components:
           items:
             $ref: "#/components/schemas/Comment"
           description: Lista dei commenti associati all'evento.
-        discriminator:
-          propertyName: eventType
 
     Report:
       allOf:
